[bugfix] fix dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,18 +14,19 @@ version = "0.0.1"
 requires-python = ">= 3.10"
 
 dependencies=[
-    "mcap",
-    "mcap_protobuf_support",
-    "numpy",
-    "opencv_python",
-    "pypcd4",
-    "scipy",
-    "setproctitle",
+    "mcap==1.3.1",
+    "mcap_protobuf_support==0.5.4",
+    "numpy==2.4.2",
+    "opencv_python==4.13.0.90",
+    "pypcd4==1.4.3",
+    "scipy==1.17.0",
+    "setproctitle==1.3.7",
     "torch",
     "torchvision",
-    "tqdm",
-    "typing_extensions",
-    "tyro"
+    "tqdm==4.67.1",
+    "typing_extensions==4.15.0",
+    "tyro==1.0.5",
+    "tornado==6.5.4"
 ]
 
 [tool.setuptools.packages]
